target-spec-miette/tests/datatest-snapshot/snapshots/expr-invalid/output/unclosed-delimiter-display.snap
---
source: target-spec-miette/tests/datatest-snapshot/expr.rs
expression: "format!(\"{:?}\", miette::Report::new_boxed(diagnostic))"
snapshot_kind: text
---
  × error parsing cfg() expression
   ╭────
 1 │ cfg(unix
   ·    ┬
   ·    ╰── expected one of `=`, `,`, `)` here
   ╰────
